# nfs-scanner-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml  windows-build.yml
docs/: architecture.md  async_acquisition.md  data_storage.md  heatmap_rendering.md  motion_serial_test.md  offline_analysis.md  python_migration_spectrum_logic.md  scan_state_machine.md  spectrum_scpi.md
installer/: nfs_scanner.iss
resources/: app.qrc
resources/styles/: app.qss
scripts/: build_installer_windows.ps1  build_windows_msvc.ps1  dev_build_all_windows.ps1  package_portable_windows.ps1  run_windows_msvc.ps1  setup_qt_windows.ps1
src/: main.cpp
src/analysis/: FrequencyCsvParser.cpp  FrequencyCsvParser.h  FrequencyData.cpp  FrequencyData.h  HeatmapGenerator.cpp  HeatmapGenerator.h  LutManager.cpp  LutManager.h
src/app/: AppContext.cpp  AppContext.h  AppVersion.h
src/core/: ScanConfig.cpp  ScanConfig.h  ScanManager.cpp  ScanManager.h  ScanPathPlanner.cpp  ScanPathPlanner.h  ScanPoint.cpp  ScanPoint.h  ScanResult.cpp  ScanResult.h  ScanWorker.cpp  ScanWorker.h
src/devices/motion/: IMotionController.h  MockMotionController.cpp  MockMotionController.h  SerialMotionController.cpp  SerialMotionController.h
src/devices/spectrum/: FswSpectrumAnalyzer.cpp  FswSpectrumAnalyzer.h  GenericScpiSpectrumAnalyzer.cpp  GenericScpiSpectrumAnalyzer.h  ISpectrumAnalyzer.h  MockSpectrumAnalyzer.cpp  MockSpectrumAnalyzer.h  N9020aSpectrumAnalyzer.cpp  N9020aSpectrumAnalyzer.h  ScpiTcpClient.cpp  ScpiTcpClient.h  SpectrumAcquisitionRequest.h  SpectrumAcquisitionResult.h  SpectrumAcquisitionWorker.cpp  SpectrumAcquisitionWorker.h  SpectrumAnalyzerFactory.cpp  SpectrumAnalyzerFactory.h  SpectrumConfig.h  SpectrumParsingUtils.cpp  SpectrumParsingUtils.h  SpectrumTrace.h  Zna67SpectrumAnalyzer.cpp  Zna67SpectrumAnalyzer.h
src/infra/: Logger.cpp  Logger.h
src/storage/: TaskStorage.cpp  TaskStorage.h
src/ui/: HeatmapDialog.cpp  HeatmapDialog.h  HeatmapView.cpp  HeatmapView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
